# toolsnap

./: .gitignore  .pre-commit-config.yaml  README.md  poetry.txt  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
examples/google_adk/: agent.py  conftest.py  main.py  test.py  test_decorator.py  test_plugin.py  test_session.py
examples/google_adk/fixtures/: get_current_time.jsonl
examples/langchain/: agent.py  conftest.py  main.py  test_decorator.py  test_plugin.py  test_session.py
examples/langchain/fixtures/: session.jsonl
examples/strands_agents/: agent.py  conftest.py  main.py  test.py  test_decorator.py  test_plugin.py  test_session.py
examples/strands_agents/fixtures/: calculator_calls.jsonl  get_current_time.jsonl  session.jsonl
src/toolsnap/: __init__.py  cli.py  models.py  predicates.py  pytest_plugin.py  recorder.py  replayer.py  serialize.py  session.py  store.py
tests/: conftest.py  test_cli.py  test_core.py  test_pytest_plugin.py  test_recorder.py  test_replayer.py  test_serialize.py  test_session.py  test_store.py
