[project]
name = "toolsnap"
version = "0.1.3"
description = "Record and replay LLM agent tool calls for deterministic testing"
authors = [
    {name = "Himanshu",email = "waitasecant@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []
keywords = ["agents", "testing", "tools", "llm", "deterministic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Software Development :: Testing"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]

[project.scripts]
toolsnap = "toolsnap.cli:main"

[project.entry-points."pytest11"]
toolsnap = "toolsnap.pytest_plugin"

[project.urls]
Changelog = "https://github.com/waitasecant/toolsnap/releases/latest"
Repository = "https://github.com/waitasecant/toolsnap"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
omit = ["tests/*"]
